--- a/index.html
+++ b/index.html
@@ -7,6 +7,47 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <header class="header">
+        <h1>Caleb Lacson</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="about">About</a>
+                </li>
+                <li>
+                    <a href="work">Work</a>
+                </li>
+                <li>
+                    <a href="contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
+    <div class="hero"></div>
+
+    <section class="main-content">
+
+        <section class="about">
+            <h2>About Me</h2>
+            <p>
+
+            </p>
+        </section>
+        
+        <section class="work">
+            <h2>Work</h2>
+            <p>
+
+            </p>
+        </section>
+
+        <section class="contact">
+            <h2>Contact</h2>
+            <p>
+
+            </p>
+        </section>
+    </section>
 </body>
 </html>
