--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfolio</title>
 </head>
+
 <body>
     <header class="header">
-        <h1>Caleb Lacson</h1>
+        <div id="h1">
+            <h1>Caleb Lacson</h1>
+        </div>
         <nav>
             <ul>
                 <li>
-                    <a href="about">About</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="work">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="contact">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -29,22 +34,24 @@
     <section class="main-content">
 
         <section class="about">
+
             <h2>About Me</h2>
-            <p>
+
+            <p>test
 
             </p>
         </section>
         
         <section class="work">
             <h2>Work</h2>
-            <p>
+            <p>test
 
             </p>
         </section>
 
         <section class="contact">
             <h2>Contact</h2>
-            <p>
+            <p>test
 
             </p>
         </section>
