various changes; added picture of me

--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
         <h1>
             Hello, I am Caleb Lacson.
         </h1>
+        <div id="selfie">
+            <img src="assets/images/headshot.jpeg"
+            alt="a headshot picture of Caleb Lacson, wearing glasses and
+            a red and white patterned collared-shirt">
+        </div>
     </div>
 
     <section class="main flex">
         
         <!-- first section -->
-        <section class="card">
+        <section>
             <!-- section title is to the left -->
             <div class="title">
                 <h2 id="about">About</h2>
@@ -61,7 +66,7 @@
         </section>
 
         <!-- second section -->
-        <section class="card">
+        <section>
             <!-- section title is to the left -->
             <div class="title">
                 <h2 id="work">Work</h2>
@@ -113,7 +118,7 @@
         </section>
 
         <!-- third section -->
-        <section class="card">
+        <section>
             <!-- section title is to the left -->
             <div class="title">
                 <h2 id="contact">Contact</h2>
