swapped placeholder image/link with my Proximity project

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
                 <div class="row">
                     
                     <div class="img">
-                        <a href="https://placeholder-name.com">
-                            <img src="./assets/images/network1.jpg" 
-                            alt="a placeholder image">
+                        <a href="https://domomyles.github.io/Proximity/">
+                            <img src="./assets/images/Proximity.jpg" 
+                            alt="the website for Proximity, a location-based 
+                            navigation application">
                             <p class="subtitle">
-                                Placeholder
+                                Proximity
                             </p>
                         </a>
                     </div>
