--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
                     </div>
                                     
                     <div class="img">
-                        <a href="https://placeholder-name.com">
-                            <img src="./assets/images/network2.jpg" 
-                            alt="a placeholder image">
+                        <a href="https://domomyles.github.io/Proximity/">
+                            <img src="./assets/images/Proximity.jpg" 
+                            alt="the website for Proximity, a location-based 
+                            navigation application">
                             <p class="subtitle">
-                                Placeholder
+                                Proximity
                             </p>
                         </a>
                     </div>
