swapping placeholder with image/link for Proximity project

--- a/index.html
+++ b/index.html
@@ -103,12 +103,11 @@
                     </div>
                                     
                     <div class="img">
-                        <a href="https://domomyles.github.io/Proximity/">
-                            <img src="./assets/images/Proximity.jpg" 
-                            alt="the website for Proximity, a location-based 
-                            navigation application">
+                        <a href="https://placeholder-name.com">
+                            <img src="./assets/images/network2.jpg" 
+                            alt="a placeholder image">
                             <p class="subtitle">
-                                Proximity
+                                Placeholder
                             </p>
                         </a>
                     </div>
