added What's in the Fridge

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                                     
                     <div class="img">
                         <a href="https://placeholder-name.com">
-                            <img src="./assets/images/network2.jpg" 
-                            alt="a placeholder image">
-                            <p class="subtitle">
-                                Placeholder
+                            <img src="./assets/images/fridge.jpg" 
+                            alt="a picture of food">
+                            <p class="fridge-label">
+                                What's in the Fridge?
                             </p>
                         </a>
                     </div>
