added password generator

--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
                 <div class="row">
                     
                     <div class="img">
-                        <a href="https://domomyles.github.io/Proximity/">
-                            <img src="./assets/images/Proximity.jpg" 
-                            alt="the website for Proximity, a location-based 
-                            navigation application">
+                        <a href="https://clacson95.github.io/password-generator/">
+                            <img src="./assets/images/password.jpg" 
+                            alt="a website that lets you generate a password based on user input">
                             <p class="subtitle">
-                                Proximity
+                                Password Generator
                             </p>
                         </a>
                     </div>
