--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                     </div>
                                     
                     <div class="img">
-                        <a href="https://placeholder-name.com">
-                            <img src="./assets/images/fridge.jpg" 
-                            alt="a picture of food">
-                            <p class="fridge-label">
-                                What's in the Fridge?
+                        <a href="https://mylo-app.herokuapp.com/">
+                            <img src="./assets/images/hero2.png" 
+                            alt="the home website page for MyloChat, a chat-messaging application focused on animal protection">
+                            <p class="subtitle">
+                                MyloChat
                             </p>
                         </a>
                     </div>
